[tool.poetry]
name = "Kumquat"
version = "0.1.0"
description = ""
authors = ["kesha1225"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.2"
"vbml" = {git = "https://github.com/timoniq/vbml"}
jinja2 = "^2.11.0"
aiofile = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
